--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "concurrently": "^9.2.0"
+  },
+  "dependencies": {
+    "react-quill": "^2.0.0",
+    "rss-parser": "^3.13.0"
   }
 }
