--- a/startup-nextjs-main/package.json
+++ b/startup-nextjs-main/package.json
@@ -8,7 +8,10 @@
     "dev:backend": "node server/index.js"
   },
   "dependencies": {
+    "@mantine/rte": "^5.10.5",
     "@tailwindcss/postcss": "^4.1.3",
+    "@tiptap/react": "^3.0.6",
+    "@tiptap/starter-kit": "^3.0.6",
     "axios": "^1.10.0",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
