--- a/startup-nextjs-main/package.json
+++ b/startup-nextjs-main/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.10.0",
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.5",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
