--- a/startup-nextjs-main/package.json
+++ b/startup-nextjs-main/package.json
@@ -16,6 +16,7 @@
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
     "firebase": "^11.10.0",
+    "json2csv": "^6.0.0-alpha.2",
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^7.0.5",
