--- a/startup-nextjs-main/package.json
+++ b/startup-nextjs-main/package.json
@@ -15,9 +15,12 @@
     "@tiptap/starter-kit": "^3.0.6",
     "axios": "^1.10.0",
     "bad-words": "^3.0.4",
+    "browser-image-compression": "^2.0.2",
+    "cors": "^2.8.5",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
     "firebase": "^11.10.0",
+    "helmet": "^8.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
