--- a/startup-nextjs-main/package.json
+++ b/startup-nextjs-main/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.1",
+    "@headlessui/react": "^2.2.6",
+    "@heroicons/react": "^2.2.0",
     "@mantine/rte": "^5.10.5",
     "@tailwindcss/postcss": "^4.1.3",
     "@tiptap/react": "^3.0.6",
