--- a/startup-nextjs-main/package.json
+++ b/startup-nextjs-main/package.json
@@ -31,6 +31,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "rss-parser": "^3.13.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
