--- a/startup-nextjs-main/package.json
+++ b/startup-nextjs-main/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "next dev",
+    "build": "next build",
+    "start": "next start",
     "dev:backend": "node server/index.js"
   },
   "dependencies": {
