--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "concurrently": "^9.2.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "helmet": "^8.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react-quill": "^2.0.0",
     "rss-parser": "^3.13.0"
   }
