--- a/startup-nextjs-main/package.json
+++ b/startup-nextjs-main/package.json
@@ -29,12 +29,14 @@
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^7.0.5",
+    "pdfjs-dist": "^5.4.54",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "rss-parser": "^3.13.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
